#6 - Fixed features padding on mobile

--- a/src/components/layout/features/styles.sass
+++ b/src/components/layout/features/styles.sass
@@ -19,6 +19,7 @@
 
   .columns
     +mobile
+      padding: 0 1rem
       margin: 0
     .column
       &:nth-child(1)
